--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "open": "^9.1.0"
+    "open": "^9.1.0",
+    "path": "^0.12.7"
   }
 }
